fixed alignment of output for POI.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,6 @@
 
 
-#bodytable tr:nth-child(even){
-  background-color:white;
-  padding: 3px;
-}
-#bodytable tr:nth-child(odd){
-  background-color: limegreen;
-}
+
 
   table, td, th,  tr {
     border-collapse: separate;
@@ -17,7 +11,7 @@
 
 #yelp {
   font-size: 22px;
-  text-align: center;
+  text-align: left;
   padding: 5px;
   border-collapse: separate;
   height: 225px;
@@ -28,7 +22,7 @@
 
 #yelppoi {
   font-size: 22px;
-  text-align: center;
+  text-align: left;
   padding: 5px;
   border-collapse: separate;
   height: 225px;
@@ -37,6 +31,13 @@
   display: none;
 }
 
+#yelppoi tr:nth-child(even){
+  background-color: red;
+  padding: 3px;
+}
+#yelppoi tr:nth-child(odd){
+  background-color: whitesmoke;
+}
 yelppoitbl {
   font-size: 22px;
   text-align: center;
